# lidar_filter

./: PCA.py  README.md  algorithm.md  algorithms.py  gitlog.txt  glass_filter.py  glass_filter2.py  labeler.py  plot.py  scan.py  test.py  test_lidar.py  термины.txt
lidar_filter/: package.xml  setup.py
lidar_filter/config/: standart,yaml
lidar_filter/launch/: launch_filter.launch.py
lidar_filter/lidar_filter/: algorithms.py  glass_filter.py  node.py  scan.py
log/: log1.txt  log10.txt  log11.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt
