<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_filter</name>
  <version>1.1.0</version>
  <description>Package for patching 2d laser scan from glass errors. See more: https://github.com/IvanS297/lidar_filter and https://www.youtube.com/channel/UC8cQtZ49KFYy3E-_9oM-eKg/</description>
  <maintainer email="ivan.ser202@gmail.com">ivan</maintainer>
  <license>GNU</license>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
